# earthquake-simulator

./: CMakeLists.txt  IDENTIFICATION.txt  README.md  README.txt  demo  presentation.url
app/: earthquake.cpp  test_earthquake.cpp
cmake/: FindPango.cmake  Sanitizers.cmake
include/: earthquake_system.hpp  font_controller.hpp  game_state_controller.hpp  joint.hpp  particle.hpp  particle_joint_manager.hpp  particle_system.hpp  point.hpp  point_manager.hpp  texture_utils.hpp  ui_controller.hpp
resources/: brick.texture  sky.texture
